# rag-pipeline

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
api/: main.py
eval/: qa_pairs.json
scripts/: fetch_fastapi_docs.py
src/rag/: ask.py  bm25_index.py  chunkers.py  cli.py  confidence.py  embed.py  eval.py  generate.py  ingest.py  loaders.py  rate_limit.py  retrieve.py  store.py
